--- a/web/themes/custom/durhamtech/scss/pages/_employees.scss
+++ b/web/themes/custom/durhamtech/scss/pages/_employees.scss
@@ -93,7 +93,7 @@
       }
     }
   }
-  #edit-actions {
+ .form-actions.form-group.js-form-wrapper.form-wrapper {
     margin-bottom: 15px;
     .btn {
       border: none;
